- Restructured tests for all L2S, EF and NH.    Test data generation is now part of unit tests and it's no longer necessary to prime the test database for running tests.    NOTE: For EF and L2S tests, use TestDB.sql file to generate the test database. For NH, update config file setting schemaExport to Create to have NHibernate generate the database for you.
- Updated Castle and NH libraries.
- NOTE: Final commit before move to Git and branch to net4.0

Signed-off-by: unknown <Ritesh@.(none)>

--- a/NCommon.EntityFramework/tests/NCommon.EntityFramework.Tests.csproj
+++ b/NCommon.EntityFramework/tests/NCommon.EntityFramework.Tests.csproj
@@ -65,16 +65,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Domain\ModelExtemds.cs" />
+    <Compile Include="Domain\ModelExtends.cs" />
     <Compile Include="Domain\TestModel.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>TestModel.edmx</DependentUpon>
     </Compile>
+    <Compile Include="EFDataGenerator.cs" />
+    <Compile Include="EFDataGeneratorActions.cs" />
     <Compile Include="EFRepositoryTests.cs" />
     <Compile Include="EFTransactionTests.cs" />
     <Compile Include="EFUnitOfWorkFactoryTests.cs" />
     <Compile Include="EFUnitOfWorkTests.cs" />
+    <Compile Include="OrderItemsProductStrategy.cs" />
+    <Compile Include="OrderOrderItemsStrategy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
