--- a/NCommon.NHibernate/tests/App.config
+++ b/NCommon.NHibernate/tests/App.config
@@ -1,24 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <!--<configSections>
-    <section name="hibernate-configuration"
-             type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate"/>
-  </configSections>-->
 	<appSettings>
-		<add key="schemaExportMode" value="Update"/>
+		<add key="schemaExportMode" value="Create"/>
 	</appSettings>
 	<connectionStrings>
 		<add name="testdb" connectionString="Data Source=.\SQLExpress;Initial Catalog=DevelopmentDB;Trusted_Connection=true"/>
 	</connectionStrings>
-
-  <!--<hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
-    <session-factory>
-      <property name="connection.provider">NHibernate.Connection.DriverConnectionProvider</property>
-      <property name="dialect">NHibernate.Dialect.MsSql2005Dialect</property>
-      <property name="connection.connection_string">Data Source=(local)\SQLExpress;Initial Catalog=DevelopmentDB;Trusted_Connection=true</property>
-      <property name="proxyfactory.factory_class">NHibernate.ByteCode.Castle.ProxyFactoryFactory, NHibernate.ByteCode.Castle</property>
-      <property name="show_sql">false</property>
-      <mapping assembly="NCommon.NHibernate.Tests"/>
-    </session-factory>
-  </hibernate-configuration>-->
 </configuration>
