--- a/NCommon.LinqToSql/tests/NCommon.LinqToSql.Tests.csproj
+++ b/NCommon.LinqToSql/tests/NCommon.LinqToSql.Tests.csproj
@@ -61,15 +61,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LinqToSqlDataActions.cs" />
+    <Compile Include="LinqToSqlDataGenerator.cs" />
     <Compile Include="LinqToSqlRepositoryTests.cs" />
     <Compile Include="LinqToSqlTransactionTests.cs" />
     <Compile Include="LinqToSqlUnitOfWorkFactoryTests.cs" />
     <Compile Include="LinqToSqlUnitOfWorkTests.cs" />
+    <Compile Include="OrderItemsProductStrategy.cs" />
+    <Compile Include="OrderOrderItemsStrategy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="TestData.cs">
+      <DependentUpon>TestData.dbml</DependentUpon>
     </Compile>
     <Compile Include="TestData.designer.cs">
       <AutoGen>True</AutoGen>
