--- a/NCommon.Db4o.Tests/NCommon.Db4o.Tests.csproj
+++ b/NCommon.Db4o.Tests/NCommon.Db4o.Tests.csproj
@@ -33,7 +33,11 @@
   <ItemGroup>
     <Reference Include="Db4objects.Db4o, Version=7.4.121.14026, Culture=neutral, PublicKeyToken=6199cd4f203aa8eb, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\NCommon.Db4o\src\bin\Debug\Db4objects.Db4o.dll</HintPath>
+      <HintPath>..\Libs\Db4objects.Db4o.dll</HintPath>
+    </Reference>
+    <Reference Include="Db4objects.Db4o.Linq, Version=7.4.121.14026, Culture=neutral, PublicKeyToken=6199cd4f203aa8eb, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\Libs\Db4objects.Db4o.Linq.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
