--- a/NCommon.Db4o/src/NCommon.Db4o.csproj
+++ b/NCommon.Db4o/src/NCommon.Db4o.csproj
@@ -33,11 +33,11 @@
   <ItemGroup>
     <Reference Include="Db4objects.Db4o, Version=7.4.121.14026, Culture=neutral, PublicKeyToken=6199cd4f203aa8eb, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Libs\Db4objects.Db4o.dll</HintPath>
+      <HintPath>..\..\Libs\Db4objects.Db4o.dll</HintPath>
     </Reference>
     <Reference Include="Db4objects.Db4o.Linq, Version=7.4.121.14026, Culture=neutral, PublicKeyToken=6199cd4f203aa8eb, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\Libs\Db4objects.Db4o.Linq.dll</HintPath>
+      <HintPath>..\..\Libs\Db4objects.Db4o.Linq.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
