--- a/NCommon.LinqToSql/src/NCommon.LinqToSql.2008.csproj
+++ b/NCommon.LinqToSql/src/NCommon.LinqToSql.2008.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{01A6D2F9-C34E-4D87-BE7A-4F36A78BED66}</ProjectGuid>
+    <ProjectGuid>{2781A661-3EA8-4917-B043-F3193FB0F7C8}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NCommon.NHibernate</RootNamespace>
-    <AssemblyName>NCommon.NHibernate</AssemblyName>
+    <RootNamespace>NCommon.LinqToSql</RootNamespace>
+    <AssemblyName>NCommon.LinqToSql</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SignAssembly>false</SignAssembly>
@@ -33,16 +33,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="NHibernate, Version=2.1.0.1003, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Libs\NHibernate.dll</HintPath>
-    </Reference>
-    <Reference Include="NHibernate.Linq, Version=1.0.0.0, Culture=neutral, PublicKeyToken=444cf6a87fdab271, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\Libs\NHibernate.Linq.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
+    <Reference Include="System.Data.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Xml.Linq">
@@ -55,12 +50,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CompositeUserTypeBase.cs" />
-    <Compile Include="NHRepository.cs" />
-    <Compile Include="NHTransaction.cs" />
-    <Compile Include="NHUnitOfWork.cs" />
-    <Compile Include="NHUnitOfWorkFactory.cs" />
+    <Compile Include="ILinqSession.cs" />
+    <Compile Include="LinqToSqlRepository.cs" />
+    <Compile Include="LinqToSqlTransaction.cs" />
+    <Compile Include="LinqToSqlUnitOfWork.cs" />
+    <Compile Include="LinqToSqlUnitOfWorkFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\NCommon\src\NCommon.2008.csproj">
+      <Project>{C853736D-3576-468A-A716-ACEC1CD4FAC1}</Project>
+      <Name>NCommon.2008</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="ncommon.snk" />
