--- a/NCommon.NHibernate/tests/NCommon.NHibernate.Tests.2008.csproj
+++ b/NCommon.NHibernate/tests/NCommon.NHibernate.Tests.2008.csproj
@@ -118,6 +118,16 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\src\NCommon.NHibernate.2008.csproj">
+      <Project>{01A6D2F9-C34E-4D87-BE7A-4F36A78BED66}</Project>
+      <Name>NCommon.NHibernate.2008</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\NCommon\src\NCommon.2008.csproj">
+      <Project>{C853736D-3576-468A-A716-ACEC1CD4FAC1}</Project>
+      <Name>NCommon.2008</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
