--- a/NCommon.LinqToSql/tests/NCommon.LinqToSql.Tests.2008.csproj
+++ b/NCommon.LinqToSql/tests/NCommon.LinqToSql.Tests.2008.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{A4E698A8-8E7F-401D-B0BA-CBA6CA58BBEE}</ProjectGuid>
+    <ProjectGuid>{E6957BB7-B9C6-414F-A4BD-23E038014A85}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NCommon.EntityFramework.Tests</RootNamespace>
-    <AssemblyName>NCommon.EntityFramework.Tests</AssemblyName>
+    <RootNamespace>NCommon.LinqToSql.Tests</RootNamespace>
+    <AssemblyName>NCommon.LinqToSql.Tests</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -47,13 +47,9 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Data.Entity">
+    <Reference Include="System.Data.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Runtime.Serialization">
-      <RequiredTargetFramework>3.0</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Security" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
@@ -65,31 +61,59 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Domain\ModelExtends.cs" />
-    <Compile Include="Domain\TestModel.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>TestModel.edmx</DependentUpon>
-    </Compile>
-    <Compile Include="EFDataGenerator.cs" />
-    <Compile Include="EFDataGeneratorActions.cs" />
-    <Compile Include="EFRepositoryTests.cs" />
-    <Compile Include="EFTransactionTests.cs" />
-    <Compile Include="EFUnitOfWorkFactoryTests.cs" />
-    <Compile Include="EFUnitOfWorkTests.cs" />
+    <Compile Include="LinqToSqlDataActions.cs" />
+    <Compile Include="LinqToSqlDataGenerator.cs" />
+    <Compile Include="LinqToSqlRepositoryTests.cs" />
+    <Compile Include="LinqToSqlTransactionTests.cs" />
+    <Compile Include="LinqToSqlUnitOfWorkFactoryTests.cs" />
+    <Compile Include="LinqToSqlUnitOfWorkTests.cs" />
     <Compile Include="OrderItemsProductStrategy.cs" />
     <Compile Include="OrderOrderItemsStrategy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+      <DependentUpon>Settings.settings</DependentUpon>
+    </Compile>
+    <Compile Include="TestData.cs">
+      <DependentUpon>TestData.dbml</DependentUpon>
+    </Compile>
+    <Compile Include="TestData.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>TestData.dbml</DependentUpon>
+    </Compile>
+    <Compile Include="TestDataClass.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EntityDeploy Include="Domain\TestModel.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>TestModel.Designer.cs</LastGenOutput>
-      <CustomToolNamespace>NCommon.Data.EntityFramework.Tests</CustomToolNamespace>
-    </EntityDeploy>
+    <Service Include="{3259AA49-8AA1-44D3-9025-A0B520596A8C}" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.Config" />
+    <None Include="app.config" />
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <None Include="TestData.dbml">
+      <Generator>MSLinqToSQLGenerator</Generator>
+      <SubType>Designer</SubType>
+      <LastGenOutput>TestData.designer.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\src\NCommon.LinqToSql.2008.csproj">
+      <Project>{2781A661-3EA8-4917-B043-F3193FB0F7C8}</Project>
+      <Name>NCommon.LinqToSql.2008</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\NCommon\src\NCommon.2008.csproj">
+      <Project>{C853736D-3576-468A-A716-ACEC1CD4FAC1}</Project>
+      <Name>NCommon.2008</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="TestData.dbml.layout">
+      <DependentUpon>TestData.dbml</DependentUpon>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
