- Complete implementation of IState and IContext implementations - Updated NCommon.Data.NHibernate, NCommon.Data.EntityFramework, NCommon.Data.LinqToSql, NCommon.Data.Db4o implementations use IState and IContext implementations. - Updated all tests. All tests passing now.
Signed-off-by: Ritesh Rao <rao.ritesh@gmail.com>

--- a/NCommon.Db4o/tests/NCommon.Db4o.Tests.csproj
+++ b/NCommon.Db4o/tests/NCommon.Db4o.Tests.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Domain\Order.cs" />
     <Compile Include="Domain\OrderItem.cs" />
     <Compile Include="Domain\Product.cs" />
+    <Compile Include="FakeState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
