--- a/NCommon.LinqToSql/tests/app.config
+++ b/NCommon.LinqToSql/tests/app.config
@@ -4,7 +4,7 @@
     </configSections>
     <connectionStrings>
         <add name="NCommon.LinqToSql.Tests.Properties.Settings.DevelopmentDBConnectionString"
-            connectionString="Data Source=(local)\SQLExpress;Initial Catalog=DevelopmentDB;Integrated Security=True"
+            connectionString="Data Source=(local);Initial Catalog=DevelopmentDB;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
 </configuration>
