--- a/NCommon.NHibernate/tests/App.config
+++ b/NCommon.NHibernate/tests/App.config
@@ -4,6 +4,6 @@
 		<add key="schemaExportMode" value="Create"/>
 	</appSettings>
 	<connectionStrings>
-		<add name="testdb" connectionString="Data Source=.\SQLExpress;Initial Catalog=DevelopmentDB;Trusted_Connection=true"/>
+		<add name="testdb" connectionString="Data Source=(local);Initial Catalog=DevelopmentDB;Trusted_Connection=true"/>
 	</connectionStrings>
 </configuration>
